# obsidian

./: .buildinfo  .coveragerc  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSES_THIRD_PARTY  app.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  readme.md  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/stubs/: api_docs.doctree  changelog.doctree  contributing.doctree  license.doctree  publications.doctree  reference.doctree  tutorials.doctree  wiki.doctree
.doctrees/wiki/: 1_APO_Workflow_and_CodeStructure.doctree  2_Analysis_and_Visualization.doctree  3_Data.doctree  4_SurrogateModel.doctree  5_AcquisitionFunction.doctree
.github/workflows/: CD.yml  CI.yml  codecov.yml  documentation.yml
_modules/: index.html
_modules/botorch/acquisition/: active_learning.html  logei.html  monte_carlo.html
_modules/botorch/acquisition/multi_objective/: logei.html  parego.html
_modules/obsidian/: exceptions.html
_modules/obsidian/acquisition/: custom.html
_modules/obsidian/campaign/: analysis.html  campaign.html  explainer.html
_modules/obsidian/constraints/: base.html  input.html  output.html
_modules/obsidian/experiment/: design.html  simulator.html  utils.html
_modules/obsidian/experiment/benchmark/: geometric.html  optithon.html
_modules/obsidian/objectives/: base.html  custom.html  scalarize.html  sequence.html
_modules/obsidian/optimizer/: base.html  bayesian.html
_modules/obsidian/parameters/: base.html  continuous.html  discrete.html  param_space.html  targets.html  transforms.html  utils.html
_modules/obsidian/plotting/: branding.html  mpl.html  plotly.html  shap.html
_modules/obsidian/surrogates/: base.html  botorch.html  custom_GP.html  custom_torch.html  utils.html
_sources/stubs/: api_docs.rst.txt  contributing.rst.txt  license.rst.txt  publications.rst.txt  tutorials.rst.txt  wiki.rst.txt
_sources/stubs/tutorials/: Constrained multi-output min-max.rst.txt  Cost-penalized custom objective.rst.txt  Simple single objective.rst.txt
_static/: mycss.css  publications.md
_static/tutorials/: Cost-penalized custom objective.html
demo/: Constrained multi objective.ipynb  Constrained multi-output min-max.ipynb  Cost-penalized custom objective.ipynb  Joint optimization with constant param.ipynb  Simple single objective.ipynb
docs/: conf.py  index.rst
docs/_static/: mycss.css  publications.md
docs/_static/tutorials/: Simple single objective.html
docs/_templates/: module.rst  module_shallow.rst
docs/stubs/: api_docs.rst  reference.rst  tutorials.rst
docs/wiki/: 1_APO_Workflow_and_CodeStructure.md  2_Analysis_and_Visualization.md  2_SMBO_Workflow_and_CodeStructure.md  3_Analysis_and_Visualization.md  3_Data.md  4_SurrogateModel.md  5_AcquisitionFunction.md
obsidian/: __init__.py  config.py  exceptions.py  utils.py
obsidian/acquisition/: __init__.py  acquisition_botorch.py  aq_config.py  botorch.py  config.py  custom.py
obsidian/campaign/: __init__.py  analysis.py  campaign.py  explainer.py
obsidian/constraints/: __init__.py  base.py  config.py  input.py  input_custom.py  output.py  output_custom.py  utils.py
obsidian/dash/: __init__.py  help.py  infobar.py  inputs_config.py  inputs_data.py  optimize.py  plots.py  predict.py  utils.py
obsidian/experiment/: __init__.py  design.py  simulator.py  utils.py
obsidian/experiment/benchmark/: __init__.py  geometric.py  optithon.py
obsidian/objectives/: __init__.py  base.py  config.py  custom.py  custom_objectives.py  obj_config.py  scalarize.py  sequence.py  utils.py
obsidian/optimizer/: BO_optimizer.py  __init__.py  base.py  base_optimizer.py  bayesian.py
obsidian/parameters/: __init__.py  base.py  config.py  continuous.py  discrete.py  param_space.py  targets.py  transforms.py  utils.py
obsidian/plotting/: __init__.py  branding.py  mpl.py  mpl_plotting.py  plotly.py  shap.py  shap_helper.py
obsidian/surrogates/: GP_custom.py  __init__.py  base.py  botorch.py  config.py  custom_GP.py  custom_torch.py  surrogate_base.py  surrogate_botorch.py  surrogate_config.py  torch_custom.py  utils.py
obsidian/tests/: __init__.py  default_campaign.json  default_campaign_MOO.json  default_campaign_SOO.json  param_configs.py  test_campaign.py  test_constraints.py  test_experiment.py  test_objectives.py  test_optimizer_MOO.py  test_optimizer_SOO.py  test_parameters.py  test_plotting.py  test_validations.py  utils.py
stubs/: api_docs.html  changelog.html  contributing.html  license.html  publications.html  reference.html  tutorials.html  wiki.html
stubs/tutorials/: Cost-penalized custom objective.html
wiki/: 1_APO_Workflow_and_CodeStructure.html  2_Analysis_and_Visualization.html  3_Data.html  4_SurrogateModel.html  5_AcquisitionFunction.html
