[tool.poetry]
name = "obsidian-apo"
version = "0.7.12"
description = "Automated experiment design and black-box optimization"
authors = [
    {name = "Kevin Stone, email = "kevin.stone38@gmail.com"},
    {name = "Yuting Xu", email = "yuting.xu@merck.com"}
]
packages = [
    { include = "obsidian" },
]

[project]
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent"
]
keywords = [
    "optimization",
    "experiment design",
    "Bayesian optimization",
    "process development",
    "APO",
    "DOE"
]

[project.urls]
Homepage = "https://obsidian-apo.readthedocs.io/"
Documentation = "https://obsidian-apo.readthedocs.io/en/latest/stubs/api_docs.html"
Repository = "https://github.com/MSDLLCpapers/obsidian/"
Changelog = "https://obsidian-apo.readthedocs.io/en/latest/stubs/changelog.html"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.3.0"
botorch = "^0.11.1"
gpytorch = "^1.11"
pandas = "^2.2.2"
numpy = "^1.26"
scipy = "^1.13.1"
pyyaml = "^6.0.1"
shap = "^0.45.1"
matplotlib = "^3.9.0"
plotly = "^5.22.0"

flask = { version =  "^3.0.3", optional = true}
dash = { version =  "^2.17.1", optional = true}
dash-daq = { version =  "^0.5.0", optional = true}
dash-bootstrap-components = { version =  "^1.6.0", optional = true}
pytest = { version =  "^8.2.2", optional = true}
xlrd = { version =  "^2.0.1", optional = true}
ipykernel = { version =  "^6.29.4", optional = true}
jupyterlab = { version =  "^4.2.2", optional = true}
flake8 = { version =  "^7.1.0", optional = true}
pytest-cov = { version =  "^5.0.0", optional = true}
sphinx = { version =  "^7.3.7", optional = true}
myst-parser = { version =  "^3.0.1", optional = true}
pydata-sphinx-theme = { version =  "^0.15.4", optional = true}
linkify-it-py = { version =  "^2.0.3", optional = true}


[tool.poetry.extras]
app = ["flask", "dash", "dash-daq", "dash-bootstrap-components"]
dev = ["pytest", "xlrd", "ipykernel", "jupyterlab", "flake8", "pytest-cov"]
docs = ["sphinx", "myst-parser", "pydata-sphinx-theme", "linkify-it-py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"